// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chained exports > CSS lists both animations of the element, with the second one delayed 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-a34o74" role="img" aria-label="Logo"><style>
.sk-a34o74-0 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a34o74-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both, sk-a34o74-t1-pulse 1400ms ease-in-out 2000ms infinite normal forwards;
}
.sk-a34o74-1 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a34o74-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both, sk-a34o74-t1-pulse 1400ms ease-in-out 2000ms infinite normal forwards;
}
@keyframes sk-a34o74-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@keyframes sk-a34o74-t1-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-a34o74 * {
    animation: none;
  }
  .sk-a34o74-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
  .sk-a34o74-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-a34o74-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-a34o74-1"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10"/></svg>
"
`;

exports[`chained exports > React and Motion keep the sequence 1`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-a34o74-0 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a34o74-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both, sk-a34o74-t1-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out calc(2000ms / var(--sk-speed, 1)) var(--sk-iterations, infinite) normal forwards;
  animation-play-state: var(--sk-play-state, running);
}
.sk-a34o74-1 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-a34o74-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both, sk-a34o74-t1-pulse calc(1400ms / var(--sk-speed, 1)) ease-in-out calc(2000ms / var(--sk-speed, 1)) var(--sk-iterations, infinite) normal forwards;
  animation-play-state: var(--sk-play-state, running);
}
@keyframes sk-a34o74-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@keyframes sk-a34o74-t1-pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  50% {
    opacity: 0.5;
    transform: scale(1.06);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-a34o74 * {
    animation: none;
  }
  .sk-a34o74-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
  .sk-a34o74-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-a34o74 \${className}\` : "sk-a34o74"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-a34o74-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-a34o74-1" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
    </svg>
  );
}
"
`;

exports[`chained exports > React and Motion keep the sequence 2`] = `
""use client";

import {
  type AnimationOptions,
  type AnimationPlaybackControls,
  type DOMKeyframesDefinition,
  useAnimate,
  useReducedMotion,
} from "motion/react";
import { useEffect, useRef } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-a34o74-0 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
  opacity: 1;
  transform: scale(1);
}
.sk-a34o74-1 {
  transform-box: fill-box;
  transform-origin: center;
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  stroke-dashoffset: 1;
  fill-opacity: 0;
  opacity: 1;
  transform: scale(1);
}
@media (prefers-reduced-motion: reduce) {
  .sk-a34o74 * {
    animation: none;
  }
  .sk-a34o74-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
  .sk-a34o74-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
    opacity: 1;
    transform: none;
  }
}
\`;

type Track = { selector: string; keyframes: DOMKeyframesDefinition; options: AnimationOptions };

const tracks: Track[] = [
  {
    selector: ".sk-a34o74-0",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a34o74-0",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 2,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a34o74-1",
    keyframes: {
      strokeDashoffset: [1, 0, 0],
      fillOpacity: [0, 0, 1],
    },
    options: {
      duration: 2,
      delay: 0,
      ease: "easeInOut",
      times: [0, 0.6, 1],
      repeat: 0,
      repeatType: "loop",
    },
  },
  {
    selector: ".sk-a34o74-1",
    keyframes: {
      opacity: [1, 0.5, 1],
      scale: [1, 1.06, 1],
    },
    options: {
      duration: 1.4,
      delay: 2,
      ease: "easeInOut",
      times: [0, 0.5, 1],
      repeat: Number.POSITIVE_INFINITY,
      repeatType: "loop",
    },
  },
];

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const [scope, animate] = useAnimate<SVGSVGElement>();
  const reducedMotion = useReducedMotion();
  const controls = useRef<AnimationPlaybackControls[]>([]);

  useEffect(() => {
    if (reducedMotion) return;
    controls.current = tracks.map((track) =>
      animate(track.selector, track.keyframes, {
        ...track.options,
        ...(loop === undefined ? {} : { repeat: loop ? Number.POSITIVE_INFINITY : 0 }),
      }),
    );
    return () => {
      for (const control of controls.current) control.stop();
      controls.current = [];
    };
  }, [animate, loop, reducedMotion]);

  useEffect(() => {
    for (const control of controls.current) {
      control.speed = speed;
      if (paused) control.pause();
      else control.play();
    }
  }, [speed, paused, loop, reducedMotion]);

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-a34o74 \${className}\` : "sk-a34o74"}
      ref={scope}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-a34o74-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-a34o74-1" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
    </svg>
  );
}
"
`;

exports[`chained exports > outline then shine exports the overlay too 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" id="Layer_1" class="sk-q277fl" role="img" aria-label="Logo"><style>
.sk-q277fl-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-q277fl-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-q277fl-1 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-q277fl-t0-draw-fill 2000ms ease-in-out 0ms 1 normal both;
}
.sk-q277fl-2 {
  transform: translate(-61.397px, 50px) skewX(20deg);
  animation: sk-q277fl-t1-shine 1600ms ease-in-out 2000ms infinite normal both;
}
.sk-q277fl-3 {
  stop-color: var(--sk-shine, #fff);
}
@keyframes sk-q277fl-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@keyframes sk-q277fl-t1-shine {
  0% {
    transform: translate(-61.397px, 50px) skewX(20deg);
  }
  60% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
  100% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-q277fl * {
    animation: none;
  }
  .sk-q277fl-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-q277fl-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
</style><path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" class="sk-q277fl-0"/><polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" stroke-width="4" stroke-miterlimit="10"/><path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" stroke-width="5" stroke-miterlimit="10"/><ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" class="sk-q277fl-1"/><line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" stroke-width="4" stroke-miterlimit="10"/><defs><clipPath id="sk-q277fl-t1-clip"><path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)"/><ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)"/></clipPath><linearGradient id="sk-q277fl-t1-grad" x1="0" y1="0" x2="1" y2="0"><stop offset="0" stop-opacity="0" class="sk-q277fl-3"/><stop offset="0.5" stop-opacity="0.6" class="sk-q277fl-3"/><stop offset="1" stop-opacity="0" class="sk-q277fl-3"/></linearGradient></defs><g clip-path="url(#sk-q277fl-t1-clip)" pointer-events="none" aria-hidden="true"><rect x="-25" y="-100" width="50" height="200" fill="url(#sk-q277fl-t1-grad)" class="sk-q277fl-2"/></g></svg>
"
`;

exports[`chained exports > outline then shine exports the overlay too 2`] = `
"import type { CSSProperties } from "react";

// Generated by strokit. Colors follow --sk-stroke; prefers-reduced-motion shows the final frame.
const css = \`
.sk-q277fl-0 {
  stroke: var(--sk-stroke, #E30613);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-q277fl-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-q277fl-1 {
  stroke: var(--sk-stroke, #2563eb);
  stroke-width: 2;
  stroke-dasharray: 1 1;
  animation: sk-q277fl-t0-draw-fill calc(2000ms / var(--sk-speed, 1)) ease-in-out 0ms var(--sk-iterations, 1) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-q277fl-2 {
  transform: translate(-61.397px, 50px) skewX(20deg);
  animation: sk-q277fl-t1-shine calc(1600ms / var(--sk-speed, 1)) ease-in-out calc(2000ms / var(--sk-speed, 1)) var(--sk-iterations, infinite) normal both;
  animation-play-state: var(--sk-play-state, running);
}
.sk-q277fl-3 {
  stop-color: var(--sk-shine, #fff);
}
@keyframes sk-q277fl-t0-draw-fill {
  0% {
    stroke-dashoffset: 1;
    fill-opacity: 0;
  }
  60% {
    stroke-dashoffset: 0;
    fill-opacity: 0;
  }
  100% {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
@keyframes sk-q277fl-t1-shine {
  0% {
    transform: translate(-61.397px, 50px) skewX(20deg);
  }
  60% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
  100% {
    transform: translate(261.397px, 50px) skewX(20deg);
  }
}
@media (prefers-reduced-motion: reduce) {
  .sk-q277fl * {
    animation: none;
  }
  .sk-q277fl-0 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
  .sk-q277fl-1 {
    stroke-dashoffset: 0;
    fill-opacity: 1;
  }
}
\`;

export type TestLogoProps = {
  /** Width and height (number = px). Defaults to the SVG's own size. */
  size?: number | string;
  /** Playback speed multiplier: 2 plays twice as fast. */
  speed?: number;
  /** true repeats forever, false plays once. Defaults to the exported animation. */
  loop?: boolean;
  paused?: boolean;
  className?: string;
  /** Accessible name. Defaults to "Logo". */
  label?: string;
};

export function TestLogo({
  size,
  speed = 1,
  loop,
  paused = false,
  className,
  label = "Logo",
}: TestLogoProps) {
  const style = {
    "--sk-speed": speed,
    "--sk-play-state": paused ? "paused" : "running",
    ...(loop === undefined ? {} : { "--sk-iterations": loop ? "infinite" : 1 }),
  } as CSSProperties;

  return (
    <svg
      viewBox="0 0 200 100"
      id="Layer_1"
      width={size}
      height={size}
      className={className ? \`sk-q277fl \${className}\` : "sk-q277fl"}
      style={style}
      role="img"
      aria-label={label}
    >
      <style>{css}</style>
      <path d="M10 90 L40 10 L70 90 Z" fill="#E30613" pathLength="1" className="sk-q277fl-0" />
      <polyline points="80,90 110,10 140,90" fill="none" stroke="#1D1D1B" strokeWidth="4" strokeMiterlimit="10" />
      <path d="M150 90 L190 10" fill="none" stroke="#1D1D1B" strokeWidth="5" strokeMiterlimit="10" />
      <ellipse id="accent" cx="170" cy="70" rx="12" ry="8" fill="#2563eb" pathLength="1" className="sk-q277fl-1" />
      <line x1="10" y1="95" x2="190" y2="95" fill="none" stroke="#10b981" strokeWidth="4" strokeMiterlimit="10" />
      <defs>
        <clipPath id="sk-q277fl-t1-clip">
          <path d="M10 90 L40 10 L70 90 Z" transform="matrix(1 0 0 1 0 0)" />
          <ellipse cx="170" cy="70" rx="12" ry="8" transform="matrix(1 0 0 1 0 0)" />
        </clipPath>
        <linearGradient id="sk-q277fl-t1-grad" x1="0" y1="0" x2="1" y2="0">
          <stop offset="0" stopOpacity="0" className="sk-q277fl-3" />
          <stop offset="0.5" stopOpacity="0.6" className="sk-q277fl-3" />
          <stop offset="1" stopOpacity="0" className="sk-q277fl-3" />
        </linearGradient>
      </defs>
      <g clipPath="url(#sk-q277fl-t1-clip)" pointerEvents="none" aria-hidden="true">
        <rect x="-25" y="-100" width="50" height="200" fill="url(#sk-q277fl-t1-grad)" className="sk-q277fl-2" />
      </g>
    </svg>
  );
}
"
`;
